[package]
name        = "meteora-dlmm-cpi"
version     = "0.1.0"
description = "Created with Anchor"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "meteora_dlmm_cpi"

[features]
# build for CPI
default        = ["cpi"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
