[package]
name        = "meteora-dlmm-cpi"
version     = "0.1.0"
description = "Created with Anchor"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "meteora_dlmm_cpi"

[features]
# build for CPI
default        = ["cpi"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true }
bytemuck    = { workspace = true, features = ["derive", "min_const_generics"] }
num-traits  = "0.2.16"
num-integer = "0.1.45"
ruint       = "1.3.0"

[lints]
workspace = true
