[package]
name        = "pools-integration"
version     = "0.1.0"
description = "Created with Anchor"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "pools_integration"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true, features = ["metadata"] }

whirlpool-cpi    = { git = "https://github.com/orca-so/whirlpool-cpi", branch = "anchor/0.30.1" }
raydium-clmm-cpi = { workspace = true }
meteora-dlmm-cpi = { workspace = true }

solana-program = ">=1.18, <2"

# https://github.com/solana-labs/solana/issues/34609
ahash = "=0.8.11"
